--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,7 @@
         "chrono": "cpp",
         "compare": "cpp",
         "concepts": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "unordered_set": "cpp"
     },
 }
